--- a/main.yml
+++ b/main.yml
@@ -1,3 +1,18 @@
-- hosts: devo
+- hosts: labhosts
+  gather_facts: False
+  tasks:
+    - name: Ensure Python installed
+      raw: test -e /usr/bin/python || (apt-get -y update && apt-get install -y python)
+
+
+- hosts: labhosts
+  tasks:
+    - authorized_key:
+        user: "{{ ansible_env['SUDO_USER'] }}"
+        state: present
+        key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+
+- hosts: labhosts
   roles:
     - fuel-devops
+
