Install the Ubuntu HWE Kernel

--- a/fuel-devops/tasks/packages.yml
+++ b/fuel-devops/tasks/packages.yml
@@ -1,6 +1,11 @@
 ---
 # Packages for Fuel DevOps
 
+- name: Install Ubuntu Hardware Enablement Kernel
+  apt:
+    state: present
+    name: linux-generic-hwe-16.04
+
 - name: dist-upgrade
   apt:
     upgrade: dist
