--- a/fuel-devops/tasks/fuel-devops-pip-venv.yml
+++ b/fuel-devops/tasks/fuel-devops-pip-venv.yml
@@ -1,16 +1,24 @@
 ---
+  - file:
+      path: "{{ devops_path }}"
+      state: directory
+      owner: "{{ devops_user }}"
+      group: "{{ devops_group }}"
+
   - pip:
       name: pip
       state: latest
 
   - name: Install Fuel-Devops
     pip:
+      virtualenv: "{{ devops_path }}"
       state: present
       name: git+http://github.com/openstack/fuel-devops#egg=fuel-devops
     become: True
     become_user: "{{ devops_user }}"
 
   - pip:
+      virtualenv: "{{ devops_path }}"
       state: present
       name: db-psycopg2
     become: True
